apps/website/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  labels: { app: website }
spec:
  replicas: 1
  selector:
    matchLabels: { app: website }
  template:
    metadata:
      labels: { app: website }
    spec:
      containers:
      - name: website
        image: selimica/website-app:0.0.0   # placeholder; overlay dev 'latest' yapacak
        ports: [{ containerPort: 8000 }]
