apps/website/base/patch-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
spec:
  template:
    spec:
      containers:
      - name: website
