apps/website/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  labels: { app: website }
spec:
  selector: { app: website }
  ports:
  - name: http
    port: 80
    targetPort: 8000
